# sdl_and_cpp_linux

UnhappyKnight/: CMakeLists.txt
UnhappyKnight/src/: Animation.cpp  Animation.h  DummyEntity.cpp  DummyEntity.h  Entity.cpp  Entity.h  MapHandler.cpp  MapHandler.h  Window.cpp  Window.h  common.h  game.ini  main.cpp
UnhappyKnight/src/algo/: map.txt
algo_in_sdl/: CMakeLists.txt  main.cpp  maths.cpp  my_program  run.sh
